--- a/index.html
+++ b/index.html
@@ -22,6 +22,21 @@
 
   <body>
     <div class="container py-4 px-3 mx-auto">
+      <div class="text-center border-bottom">
+        <h1 class="fw-bold text-body-emphasis">Stimulus File Input Validator</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">A Stimulus controller that allows you to run client side validations for files size and extension.</p>
+          <p class="text-center mt-3">
+            <img src="https://github.com/martinnicolas/stimulus-file-input-validator/actions/workflows/tests.yml/badge.svg"/>
+
+            <img src="https://github.com/martinnicolas/stimulus-file-input-validator/actions/workflows/coverage.yml/badge.svg"/>
+
+            <img src="https://img.shields.io/github/license/mashape/apistatus.svg"/>
+          </p>
+        </div>
+      </div>
+
+      <h3 class="mt-3 fs-2 text-body-emphasis">Default error messages</h3>
       <form data-controller="file-input-validator"
         data-file-input-validator-max-file-size-value="20"
         data-file-input-validator-valid-extensions-value='["jpg", "png"]'>
@@ -40,6 +55,35 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+
+      <h3 class="mt-3 fs-2 text-body-emphasis">Custom error messages</h3>
+      <form data-controller="file-input-validator"
+        data-file-input-validator-max-file-size-value="20"
+        data-file-input-validator-valid-extensions-value='["jpg", "png"]'
+        data-file-input-validator-max-file-exceeded-error-message-value="Wrong file size"
+        data-file-input-validator-invalid-extension-error-message-value="Invalid extension">
+        <div class="mb-3">
+          <label for="file-input" class="form-label">Load a file</label>
+
+          <input type="file" id="file-input" name="file-input" class="form-control" data-file-input-validator-target="fileInput" data-action="change->file-input-validator#validate">
+          <div class="form-text mb-3"> <strong>Max file size:</strong> 20MB <strong>Valid extensions:</strong> .jpg, .png</div>
+          <div class="form-text" data-file-input-validator-target="errorMessage"></div>
+          <template data-file-input-validator-target="errorTemplate">
+            <div class="alert alert-danger">
+              ERROR_MESSAGE
+            </div>
+          </template>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <footer class="py-3 my-4">
+        <p class="text-center text-body-secondary">
+          This project is released under the
+          <a href="https://opensource.org/licenses/MIT" class="hover:text-gray-900 underline">MIT</a>
+          license.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
