Added new version and minor fixes

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">A Stimulus controller that allows you to run client side validations for files size and extension.</p>
           <p class="text-center mt-3">
+            <img src="https://img.shields.io/npm/v/stimulus-file-input-validator.svg"/>
+
             <img src="https://github.com/martinnicolas/stimulus-file-input-validator/actions/workflows/tests.yml/badge.svg"/>
 
             <img src="https://github.com/martinnicolas/stimulus-file-input-validator/actions/workflows/coverage.yml/badge.svg"/>
