Improvements for better compatibility

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       const application = Application.start()
       application.register("file-input-validator", FileInputValidator)
     </script>
+    <style>
+      body {
+        background: rgb(248, 248, 245);
+      }
+    </style>
   </head>
 
   <body>
